# ecf_dgii

./: .gitignore  Directory.Build.props  ECF_DGII.sln  README.md  global.json
.github/workflows/: publish-dotnet.yml  publish-maven.yml  publish-npm.yml  publish-packagist.yml  publish-pypi.yml  publish-react.yml  publish-swift.yml  publish.yml
.net/: .gitignore  Directory.Build.props  EcfDgii.slnx  README.md
.net/EcfDgii.Client/: BearerTokenAuthProvider.cs  EcfClient.cs  EcfClientOptions.cs  EcfDgii.Client.csproj  EcfException.cs  EcfFrontendClient.cs  PollingHelper.cs  README.md
C++/: .gitignore  .openapi-generator-ignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  ecf-dgii-client.nuspec  vcpkg.json
C++/.openapi-generator/: FILES
C++/include/ecf-dgii-client/: AnyType.h  ApiClient.h  ApiConfiguration.h  ApiException.h  EcfClient.h  HttpContent.h  IHttpBody.h  JsonBody.h  ModelBase.h  MultipartFormData.h  Object.h
C++/include/ecf-dgii-client/api/: ApiKeyApi.h  AprobacionComercialApi.h  CompanyApi.h  DgiiApi.h  EcfApi.h  RecepcionApi.h
C++/include/ecf-dgii-client/model/: AcecfReceptionRequestDto.h  AcecfReceptionRequestDto_progress.h  AcecfSummaryDto.h  AcecfSummaryDto_progress.h  AcecfSummaryDto_receptorHttpStatus.h  AllTipoECFTypes.h  AnulacionListResponse.h  AnulacionRequest.h  CertificateResponse.h  CodificacionTipoImpuestosType.h  CodigoModificacionType.h  CodigosItem.h  CompanyResponse.h  Comprador.h  DGIIEnvironment.h  DescuentoORecargo.h  DetalleAnulacionRequest.h  DetalleAnulacionRequestDto.h  Directorio.h  ECF.h  ECFType.h  Ecf31CodificacionTipoImpuestosType.h  Ecf31CodigosItem.h  Ecf31Comprador.h  Ecf31DescuentoORecargo.h  Ecf31DescuentoORecargo_montoDescuentooRecargo.h  Ecf31DescuentoORecargo_valorDescuentooRecargo.h  Ecf31ECF.h  Ecf31Emisor.h  Ecf31Encabezado.h  Ecf31FormaDePago.h  Ecf31FormaDePago_montoPago.h  Ecf31FormaPagoType.h  Ecf31IdDoc.h  Ecf31IdDoc_totalPaginas.h  Ecf31ImpuestoAdicional.h  Ecf31ImpuestoAdicional2.h  Ecf31ImpuestoAdicional2_montoImpuestoSelectivoConsumoEspecifico.h  Ecf31ImpuestoAdicional2_tasaImpuestoAdicional.h  Ecf31ImpuestoAdicionalOtraMoneda.h  (+366 more)
C++/nuget/: ecf-dgii-client.cpp.targets
C++/src/: AnyType.cpp  ApiClient.cpp  ApiConfiguration.cpp  ApiException.cpp  EcfClient.cpp  HttpContent.cpp  JsonBody.cpp  ModelBase.cpp  MultipartFormData.cpp  Object.cpp
C++/src/api/: ApiKeyApi.cpp  AprobacionComercialApi.cpp  CompanyApi.cpp  DgiiApi.cpp  EcfApi.cpp  RecepcionApi.cpp
C++/src/model/: AcecfReceptionRequestDto.cpp  AcecfReceptionRequestDto_progress.cpp  AcecfSummaryDto.cpp  AcecfSummaryDto_progress.cpp  AcecfSummaryDto_receptorHttpStatus.cpp  AllTipoECFTypes.cpp  AnulacionListResponse.cpp  AnulacionRequest.cpp  CertificateResponse.cpp  CodificacionTipoImpuestosType.cpp  CodigoModificacionType.cpp  CodigosItem.cpp  CompanyResponse.cpp  Comprador.cpp  DGIIEnvironment.cpp  DescuentoORecargo.cpp  DetalleAnulacionRequest.cpp  DetalleAnulacionRequestDto.cpp  Directorio.cpp  ECF.cpp  ECFType.cpp  Ecf31CodificacionTipoImpuestosType.cpp  Ecf31CodigosItem.cpp  Ecf31Comprador.cpp  Ecf31DescuentoORecargo.cpp  Ecf31DescuentoORecargo_montoDescuentooRecargo.cpp  Ecf31DescuentoORecargo_valorDescuentooRecargo.cpp  Ecf31ECF.cpp  Ecf31Emisor.cpp  Ecf31Encabezado.cpp  Ecf31FormaDePago.cpp  Ecf31FormaDePago_montoPago.cpp  Ecf31FormaPagoType.cpp  Ecf31IdDoc.cpp  Ecf31IdDoc_totalPaginas.cpp  Ecf31ImpuestoAdicional.cpp  Ecf31ImpuestoAdicional2.cpp  Ecf31ImpuestoAdicional2_montoImpuestoSelectivoConsumoEspecifico.cpp  Ecf31ImpuestoAdicional2_tasaImpuestoAdicional.cpp  Ecf31ImpuestoAdicionalOtraMoneda.cpp  (+366 more)
C++/test_package/: CMakeLists.txt  conanfile.py
C++/test_package/src/: test.cpp
C++/vcpkg/: portfile.cmake
ECF_DGII.Models/: ECF_DGII.Models.csproj  README.md  XsdHandler.cs
ECF_DGII.Models/ACECF/: Acecf.cs
ECF_DGII.Models/ARECF/: Arecf.cs  (+4 more)
ECF_DGII.SDK/: ECF_DGII.SDK.csproj  IAnulacionAPI.cs  IAprobacionComercialAPI.cs  IAutenticacionAPI.cs  IConsultaDirectorioAPI.cs  IConsultaEstadoAPI.cs  IConsultaRFCEAPI.cs  IConsultaResultadoAPI.cs  IConsultaTrackIdAPI.cs  IEstatusServiciosAPI.cs  IRecepcionAPI.cs  IRecepcionFCAPI.cs  README.md
ECF_DGII.SDK.Tests/: AnulacionTests.cs  AprobacionComercialTests.cs  AutenticacionTests.cs  ConsultaDirectorioTests.cs  ConsultaEstadoTests.cs  ConsultaRFCETests.cs  ConsultaResultadoTests.cs  ConsultaTrackIdTests.cs  ECF_DGII.SDK.Tests.csproj  EstatusServiciosTests.cs  RecepcionFCTests.cs  RecepcionTests.cs
bruno/: ecf-dgii-api.json  ecf-recepcion-api.json
ios/: .openapi-generator-ignore  EcfDgiiClient.podspec  LICENSE  Package.swift  README.md  openapi-v1-processed.json
java/: .openapi-generator-ignore  README.md  build.gradle  build.sbt  openapi-generator-config.yaml  pom.xml  settings.gradle
kotlin/: .openapi-generator-ignore  README.md  build.gradle  proguard-rules.pro  settings.gradle
php/: README.md
python/: .gitignore  README.md  generate.sh  openapi-config.yaml  pyproject.toml
python/ecf_dgii/: __init__.py  client.py  enums.py  exceptions.py  frontend_client.py  models.py  polling.py
react/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
scripts/: regenerate-all.sh
typescript/: README.md  package.json  pnpm-lock.yaml  tsconfig.json  tsup.config.ts
(+4610 files in other folders)
